Fixed the spacing issues on the call to action images. Need to work on getting rating and starts complete.

--- a/styles.css
+++ b/styles.css
@@ -57,6 +57,7 @@ ul {
 .img-box{
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .episode-images{
@@ -65,6 +66,7 @@ ul {
     flex-wrap: wrap;
     padding: 0;
     margin: 0;
+   
 }
 
 .episode-images img {
